front-end/src/layout/Menu.css
/* #background-container {
    height: 10rem;
    background-color: rgba(250, 246, 211, 0.5);
    background-size: 100%;
    align-items: center;
    display: flex;
    justify-content: space-between;
    padding-left: 15%;
    padding-right: 15%;
} */

/* #logo {
    color: rgb(0, 0, 0);
    font-size: 45px;
    font-weight: 600;
    width: fit-content;
    margin-left: 10px;
    padding: 1rem 2.5rem;
    z-index: 1;
} */

nav {
    color:rgb(0, 0, 0); 
    height:6.5rem;
    z-index: 2;
}

.justify-content-between {
    /* background-image: url("https://user-images.githubusercontent.com/104235709/189022780-2b1e6a45-fb8d-4b86-845d-658b2d2b952f.jpg"); */
    background-size: 100%;
    color: rgb(199, 33, 33);
}

@media screen and (min-width: 280px) {
    #background-container {
        height: 7rem;
        display: flex;
        padding: 0 2rem;
        background-color: rgba(250, 246, 211, 0.5);
        background-size: 100%;
        align-items: center;
        display: flex;
        justify-content: space-between;
    }
    
    #logo {
        color: rgb(0, 0, 0);
        font-size: 25px;
        font-weight: 600;
        margin: auto;
        padding: auto;
        color: rgb(0, 0, 0);
        width: fit-content;
    }

    /* nav {
        color:rgb(0, 0, 0); 
        height:6.5rem;
        z-index: 2;
    } */

    li {
        list-style: none;
    }

    #accordionSidebar {
        display: flex;
        flex-direction: column;
        position:absolute;
        align-items: center; 
        top: 100px;
        right: 0;
        left: 0;
        width: 100%;
        background-color: rgb(255, 193, 112);
        text-align: center;
        transition: 0.3s;
        border-top: 2px solid black;
        opacity: 1;
    }

    /* #accordionSidebar.active {
        left: 0;
    } */

    .nav-item {
        margin: 16px 0;
    }

    .nav-link {
        transition: 0.4s ease;
        color: black;
    }

    .nav-link:hover{
        color: DarkSalmon;
    }

    .hamburger{
        display: block;
        cursor: pointer;
        padding: 2rem 2rem;
    }

    .hamburger.active .bar:nth-child(2) {
        opacity: 0;
    }

    .hamburger.active .bar:nth-child(1) {
        transform: translateY(8px) rotate(45deg);
    }

    .hamburger.active .bar:nth-child(3) {
        transform: translateY(-8px) rotate(-45deg);
    }

    .bar{
        display: block;
        width: 25px;
        height: 3px;
        /* 5px top & bottom, auto left & right */
        margin: 5px auto; 
        -webkit-transition: all 0.3s ease-in-out;
        transition: all 0.3s ease-in-out;
        background-color: black;
    }

    /* BOOTSTRAP TRIAL OF HAMBURGER */

    .animated-icon1, .animated-icon2, .animated-icon3 {
        width: 30px;
        height: 20px;
        position: relative;
        margin: 0px;
        -webkit-transform: rotate(0deg);
        -moz-transform: rotate(0deg);
        -o-transform: rotate(0deg);
        transform: rotate(0deg);
        -webkit-transition: .5s ease-in-out;
        -moz-transition: .5s ease-in-out;
        -o-transition: .5s ease-in-out;
        transition: .5s ease-in-out;
        cursor: pointer;
      }
      
      .animated-icon1 span, .animated-icon2 span, .animated-icon3 span {
        display: block;
        position: absolute;
        height: 3px;
        width: 100%;
        border-radius: 9px;
        opacity: 1;
        left: 0;
        -webkit-transform: rotate(0deg);
        -moz-transform: rotate(0deg);
        -o-transform: rotate(0deg);
        transform: rotate(0deg);
        -webkit-transition: .25s ease-in-out;
        -moz-transition: .25s ease-in-out;
        -o-transition: .25s ease-in-out;
        transition: .25s ease-in-out;
      }
      
      .animated-icon1 span {
        background: #e65100;
      }
      
      .animated-icon2 span {
        background: #e3f2fd;
      }
      
      .animated-icon3 span {
        background: #f3e5f5;
      }
      
      .animated-icon1 span:nth-child(1) {
       top: 0px;
      }
      
      .animated-icon1 span:nth-child(2) {
        top: 10px;
      }
      
      .animated-icon1 span:nth-child(3) {
        top: 20px;
      }
      
      .animated-icon1.open span:nth-child(1) {
        top: 11px;
        -webkit-transform: rotate(135deg);
        -moz-transform: rotate(135deg);
        -o-transform: rotate(135deg);
        transform: rotate(135deg);
      }
      
      .animated-icon1.open span:nth-child(2) {
        opacity: 0;
        left: -60px;
      }
      
      .animated-icon1.open span:nth-child(3) {
        top: 11px;
        -webkit-transform: rotate(-135deg);
        -moz-transform: rotate(-135deg);
        -o-transform: rotate(-135deg);
        transform: rotate(-135deg);
      }
}

